[workspace]
members = ["rice-proto", "librice", "rice-io", "rice-c", "rice-stun-types", "rice-ctypes", "fuzz"]
default-members = ["librice", "rice-proto", "rice-c", "rice-stun-types", "rice-ctypes"]
resolver = "2"

[workspace.package]
version = "0.1.1"
repository = "https://github.com/ystreet/librice"
edition = "2021"
rust-version = "1.68.2"

[workspace.dependencies]
stun-proto = { version = "1.0.0-alpha2", default-features = false }
stun-types = { version = "1.0.0-alpha2", default-features = false }
turn-client-proto = { version = "0.4.0-alpha1", default-features = false }
arbitrary = { version = "1", features = ["derive"] }
byteorder = { version = "1", default-features = false }
get_if_addrs = "0.5"
rand = { version = "0.9", default-features = false, features = ["os_rng"] }
tracing = { version = "0.1", default-features = false, features = ["attributes"] }
tracing-subscriber = "0.3"
rice-proto = { version = "0.1.1", path = "rice-proto" }
rice-c = { version = "0.1.1", path = "rice-c" }
rice-stun-types = { version = "0.1.1", path = "rice-stun-types", default-features = false }
rice-ctypes = { version = "0.1.1", path = "rice-ctypes" }
criterion = "0.6"

[profile.bench]
codegen-units = 16
lto = "thin"
