[workspace]
members = ["rice-proto", "librice", "rice-io", "rice-c", "rice-stun-types", "rice-ctypes", "fuzz"]
default-members = ["librice", "rice-proto", "rice-c", "rice-stun-types", "rice-ctypes"]
resolver = "2"

[workspace.package]
version = "0.4.2"
repository = "https://github.com/ystreet/librice"
edition = "2024"
rust-version = "1.85.0"

[workspace.dependencies]
rice-proto = { version = "0.4.2", path = "rice-proto" }
rice-c = { version = "0.4.2", path = "rice-c" }
rice-stun-types = { version = "0.4.2", path = "rice-stun-types", default-features = false }
rice-ctypes = { version = "0.4.2", path = "rice-ctypes" }

stun-proto = { version = "2.0.1", default-features = false }
stun-types = { version = "2.0.1", default-features = false }
turn-client-proto = { version = "0.7.1", default-features = false }
turn-client-dimpl = "0.1"
turn-client-openssl = "0.1"
turn-client-rustls = "0.1"
turn-server-proto = { version = "0.7.0", default-features = false }

arbitrary = { version = "1", features = ["derive"] }
byteorder = { version = "1", default-features = false }
criterion = "0.6"
if-addrs = "0.15"
smallvec = "1"
thiserror = { version = "2", default-features = false }
rand = { version = "0.9", default-features = false, features = ["os_rng"] }
tracing = { version = "0.1", default-features = false, features = ["attributes"] }
tracing-subscriber = "0.3"

[profile.bench]
codegen-units = 16
lto = "thin"

[profile.release]
panic = 'abort'
