[package]
name = "librice-proto"
description = "ICE (RFC8445) implementation protocol"
version.workspace = true
authors = ["Matthew Waters <matthew@centricular.com>"]
license = "MIT OR Apache-2.0"
keywords = ["STUN", "ICE"]
categories = ["network-programming", ]
documentation = "https://docs.rs/librice-proto"
edition.workspace = true
repository.workspace = true
rust-version.workspace = true
workspace = ".."

[features]
capi = ["libc", "socket2", "tracing-subscriber/env-filter", "get_if_addrs"]

[dependencies]
arbitrary = { workspace = true, optional = true }
byteorder.workspace = true
get_if_addrs = { workspace = true, optional = true }
nom = "7"
rand.workspace = true
tracing.workspace = true
libc = { version = "0.2", optional = true }
socket2 = { version = "0.5", optional = true }
stun-proto.workspace = true
tracing-subscriber = { workspace = true, optional = true }

[dev-dependencies]
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[package.metadata.capi]
min_version = "0.9.21"

[package.metadata.capi.library]
name = "rice-proto"
version_suffix_components = 1
rustflags = "-Cpanic=abort"
