[package]
name = "librice-proto"
description = "ICE (RFC8445) implementation protocol"
version.workspace = true
authors = ["Matthew Waters <matthew@centricular.com>"]
license = "MIT OR Apache-2.0"
keywords = ["STUN", "ICE"]
categories = ["network-programming", ]
documentation = "https://docs.rs/librice-proto"
edition.workspace = true
repository.workspace = true
rust-version.workspace = true
workspace = ".."

[features]
capi = ["libc", "tracing-subscriber"]

[dependencies]
arbitrary = { workspace = true, optional = true }
byteorder.workspace = true
libc = { version = "0.2", optional = true }
nom = "8"
rand.workspace = true
stun-proto.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, optional = true }
turn-client-proto.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
turn-server-proto = "0.2"

[package.metadata.capi]
min_version = "0.9.21"

[package.metadata.capi.header]
name = "rice-proto"
subdirectory = "rice"

[package.metadata.capi.library]
name = "rice-proto"
version_suffix_components = 1
rustflags = "-Cpanic=abort"

[package.metadata.capi.pkg_config]
name = "librice-proto"
filename = "rice-proto"
