[package]
name = "librice"
description = "ICE (RFC8445) implementation"
version.workspace = true
authors = ["Matthew Waters <matthew@centricular.com>"]
license = "MIT OR Apache-2.0"
keywords = ["STUN", "ICE"]
categories = ["network-programming", ]
documentation = "https://docs.rs/librice"
edition.workspace = true
repository.workspace = true
rust-version.workspace = true
workspace = ".."

[dependencies]
librice-proto = { version = "0.0.4", path = "../librice-proto" }
async-std = "1"
async-io = "1"
byteorder.workspace = true
get_if_addrs.workspace = true
futures = "0.3"
futures-timer = "3"
rand.workspace = true
tracing.workspace = true
tracing-futures = { version = "0.2", default-features = false, features = ["std", "std-future", "futures-03"] }
tracing-subscriber.workspace = true

[dev-dependencies]
tracing-subscriber = { workspace = true, features = ["env-filter"]}
