[package]
name = "rice-proto"
description = "ICE (RFC8445) implementation protocol"
version.workspace = true
authors = ["Matthew Waters <matthew@centricular.com>"]
license = "MIT OR Apache-2.0"
keywords = ["STUN", "ICE"]
categories = ["network-programming", ]
documentation = "https://docs.rs/rice-proto"
edition.workspace = true
repository.workspace = true
rust-version.workspace = true
workspace = ".."

[features]
default = ["capi"]
capi = ["libc", "tracing-subscriber"]

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
arbitrary = { workspace = true, optional = true }
byteorder.workspace = true
libc = { version = "0.2", optional = true }
nom = "8"
rand.workspace = true
rice-stun-types.workspace = true
stun-proto.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, optional = true }
turn-client-proto.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
turn-server-proto = "0.4.0-alpha1"
criterion.workspace = true

[package.metadata.capi]
min_version = "0.9.21"

[package.metadata.capi.header]
name = "rice-proto"
subdirectory = "rice"

[package.metadata.capi.library]
name = "rice-proto"
version_suffix_components = 1
rustflags = "-Cpanic=abort"

[package.metadata.capi.pkg_config]
name = "rice-proto"
filename = "rice-proto"

[[bench]]
name = "sendrecv"
harness = false
