[package]
name = "rice-proto"
description = "ICE (RFC8445) implementation protocol"
version.workspace = true
authors = ["Matthew Waters <matthew@centricular.com>"]
license = "MIT OR Apache-2.0"
keywords = ["STUN", "ICE"]
categories = ["network-programming", ]
documentation = "https://docs.rs/rice-proto"
edition.workspace = true
repository.workspace = true
rust-version.workspace = true
workspace = ".."

[features]
default = ["std", "rustls", "openssl"]
capi = ["dep:libc", "dep:tracing-subscriber", "std", "dep:rice-ctypes"]
std = ["rice-stun-types/std", "stun-proto/std", "turn-client-proto/std", "rand/thread_rng"]
# allows TLS connections to TURN servers
rustls = ["std", "turn-client-proto/rustls", "dep:rustls", "dep:rustls-platform-verifier"]
# allows (D)TLS connections to TURN servers
openssl = ["std", "turn-client-proto/openssl", "dep:openssl"]

[dependencies]
arbitrary = { workspace = true, optional = true }
byteorder.workspace = true
libc = { version = "0.2", optional = true }
nom = { version = "8", default-features = false }
openssl = { version = "0.10", optional = true }
rand.workspace = true
rice-stun-types.workspace = true
rice-ctypes = { workspace = true, optional = true }
rustls = { version = "0.23", optional = true }
rustls-platform-verifier = { version = "0.5", optional = true }
smallvec.workspace = true
stun-proto.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, optional = true }
turn-client-proto.workspace = true

[dev-dependencies]
tracing = { workspace = true, features = ["std"] }
tracing-subscriber.workspace = true
turn-server-proto = "0.4.0-alpha2"
criterion.workspace = true

[package.metadata.capi]
min_version = "0.9.21"

[package.metadata.capi.header]
name = "rice-proto"
subdirectory = "rice"

[package.metadata.capi.library]
name = "rice-proto"
version_suffix_components = 1
rustflags = "-Cpanic=abort"

[package.metadata.capi.pkg_config]
name = "rice-proto"
filename = "rice-proto"

[[bench]]
name = "sendrecv"
harness = false
